--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,8 +6,13 @@
     <dimen name="card_min_height">80dp</dimen>
     <dimen name="dp_25">25dp</dimen>
     <dimen name="dp_10">10dp</dimen>
+    <dimen name="dp_18">18dp</dimen>
     <dimen name="sp_20">20sp</dimen>
+    <dimen name="sp_12">12sp</dimen>
+    <dimen name="sp_16">16sp</dimen>
+    <dimen name="sp_14">14sp</dimen>
     <dimen name="sp_18">18sp</dimen>
     <dimen name="margin_13">13dp</dimen>
     <dimen name="margin_48">48dp</dimen>
+
 </resources>
